# fluster-ipad

./: .env.local  .env.public  .eslintrc.js  .gitignore  .npmrc  .swift-format  .swiftlint.yml  .syncpackrc.js  Cargo.toml  Makefile  README.md  buildServer.json  deny.toml  eslint.config.ts  global_links.json  justfile  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  turbo.json
.husky/: pre-commit
.sourcekit-lsp/: config.json
Fluster/: ContentView.swift  FlusterApp.swift  GEMINI.md  Item.swift
Fluster.xcodeproj/: README.md  project.pbxproj
Fluster.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Fluster.xcodeproj/xcuserdata/bigsexy.xcuserdatad/xcschemes/: xcschememanagement.plist
Fluster/Assets.xcassets/AccentColor.colorset/: Contents.json
Fluster/Core/models/db/: bib_entry_model.swift  note_model.swift  topic_model.swift
Fluster/Core/models/themeing/: theme_manager.swift  theme_protocol.swift  themes.swift
Fluster/Core/views/: launch_screen.storyboard
Fluster/Features/bibliography/views/: bibliography_page_view.swift  create_bib_entry_sheet_view.swift  empty_bib_list_view.swift
Fluster/Features/forms/views/: select_note_to_continue_view.swift
Fluster/Features/markdown/data/: md_note.swift
Fluster/Features/markdown/views/: editor_view.swift  markdown_note_list_view.swift  split_view.swift  (+1 more)
apps/fluster/Fluster/: FlusterApp.swift
apps/fluster/Fluster.xcodeproj/: project.pbxproj
apps/fluster_desktop/: fluster_store_local.storekit  index.html  package.json  roadmap.md  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/fluster_desktop/Fluster Desktop/: ContentView.swift  Fluster_DesktopApp.swift  Item.swift
apps/fluster_desktop/Fluster Desktop.xcodeproj/: project.pbxproj
apps/fluster_desktop/Fluster DesktopTests/: Fluster_DesktopTests.swift
apps/fluster_desktop/Fluster DesktopUITests/: Fluster_DesktopUITests.swift  Fluster_DesktopUITestsLaunchTests.swift
apps/fluster_desktop/Fluster.xcodeproj/: project.pbxproj
apps/fluster_desktop/fluster_store_local.storekit/: Configuration.storekit
apps/fluster_desktop/src/: App.tsx  main.tsx
apps/fluster_desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/fluster_desktop/src-tauri/capabilities/: default.json
apps/fluster_desktop/src-tauri/icons/icon_bundle/: 1024-mac.icns
apps/fluster_desktop/src-tauri/src/: lib.rs  main.rs
apps/fluster_desktop/src-tauri/src/core/: commands.rs
apps/fluster_desktop/src-tauri/src/features/search/methods/: fs_file_extension_glob.rs  mod.rs
apps/website/: .gitignore  .tailwind.config.cjs  .tailwind.config.ts  CHANGELOG.md  README.md  cdrm.config.json  cdrm_config.json  components.json  eslint.config.mjs  module_declarations.d.ts  next.config.ts  package.json  robots.ts  source.config.ts  tsconfig.json  tsconfig.tailwind.json  turbo.json
apps/website/.source/: index.ts  source.config.mjs
apps/website/cdrm/: on_the_gravitational_nature_of_time.cdrm  results.cdrm  test.cdrm
apps/website/my_work/: meta.json  on_the_gravitational_nature_of_time.mdx
docs/blog/: introducing_the_fluster_blog.mdx
docs/component_docs/: .component_doc_paths.json
docs/development/: ai_serialization.md  app_store_data_description.md  daily_focus_for_my_adhd_ass.md  development_environment.md  documentation.md  todo.md  workspace_diagram.mmd
docs/development/ai_parser_sequence/: ai_parser_diagram.mmd
docs/development/build_flow/: macos_build.html  macos_build.mermaid  website_build.mermaid
docs/development/dependency_diagram/: package_diagram.mmd
docs/development/generated_benchmark_content/: benchmark_2_16_2026_10.mdx  benchmark_2_16_2026_20.mdx  benchmark_2_16_2026_5.mdx  benchmark_2_16_2026_50.mdx  benchmark_2_2_2026_10.mdx  benchmark_2_2_2026_20.mdx  benchmark_2_2_2026_5.mdx  benchmark_2_2_2026_50.mdx
docs/development/rust_parsing_sequence/: rust_parsing_sequence.mmd
docs/development/script_inputs/: benchmark_changelog.md  benchmark_current_file.txt
docs/development/test_content/: main_test_content.mdx
docs/embedded_docs/: front_matter.mdx  quick_reference.mdx
docs/in_content_docs/: ai-docs.mdx  code-docs-short.mdx  conundrum.mdx  documentation-docs.mdx  emoji-docs.mdx  emphasis-docs-full.mdx  emphasis-docs-short.mdx  emphasis-docs.mdx  generated-component-list.mdx  jsx-intro-docs-short.mdx  jsx-intro-docs.mdx  mermaid.mdx  sizable-object-docs.mdx  supported-syntaxes-full.mdx  supported-syntaxes.mdx  syntax-docs.mdx
docs/in_content_docs/components/: highlight-full.mdx  highlight-short.mdx  highlight.mdx  underline-full.mdx  underline.mdx
docs/initial_note_docs/: initial_note_paths.json  initial_notes_parsed_data.json  on_the_gravitational_nature_of_time.cdrm  on_the_gravitational_nature_of_time.mdx  quick_reference.mdx  welcome_to_fluster.mdx
docs/legal/disclaimers/: typst_apache_2_0.md
docs/seed/: on_the_gravitational_nature_of_time.cdrm  welcome_to_fluster.cdrm
flatbuffers_schemas/: v1_flat_buffer_schema.fbs
internal_docs/: development_environment.md
scripts/: copy_mathjax_font_files.sh  create_feature_util.py  gather_component_docs.ts  generate_initial_note_paths.ts  post_cross_language_modifications.ts  too_lazy_to_write_font_files.ts  tsconfig.json  when_online.zsh  write_bundled_themes.ts  write_editor_constants_to_swift.ts  write_editor_constants_to_ts.ts  write_zod_to_md.ts
scripts/documentation/: get_fake_benchmark_content.ts  markdown_content_to_documentation_pair.ts  pipe_criterion_message_data_to_persistent_data.ts  replace_documentation_content_by_marker.ts  types.ts  verify_benchmark_note.ts  watch_docs_and_glow.zsh  write_content_by_in_content_doc_id.ts  write_embeddable_component_list_note.ts  write_emoji_snippet_table.ts  write_fake_benchmark_data.ts  write_zod_schema_to_markdown.ts  zod_schema_to_markdown.ts
scripts/internationalization/: generate_alphabets.py
scripts/lezer/: log_test_lezer_tree.ts
scripts/monorepo/: copy_to_public_dir.ts  repo_entity.ts  sandbox.ts
scripts/monorepo/script_wrappers/: modify_turbo_json.ts
scripts/temp/: generate_csl_files.py
(+483 files in other folders)
