[workspace]
resolver = "3"
members = [
    "packages/rust/fluster_core_utilities",
    "packages/rust/fluster_database",
    "packages/rust/fluster_internal_cli",
    "packages/rust/conundrum",
    "packages/rust/fluster_pre_parser",
    "packages/rust/fluster_swift_mdx_parser",
    "packages/rust/uniffi_bindgen",
    "packages/rust/fluster_desktop_fs/",
    "packages/rust/fluster_bibliography",
    "packages/rust/citeproc-rs/crates/csl",
    "packages/rust/citeproc-rs/crates/io",
    "packages/rust/citeproc-rs/crates/db",
    "packages/rust/citeproc-rs/crates/proc",
    "packages/rust/citeproc-rs/crates/wasm",
    "packages/rust/citeproc-rs/crates/citeproc",
    "packages/rust/citeproc-rs/bindings/ffi",
]


[workspace.package]
version = "0.0.1"
authors = ["Andrew Iglinski"]
description = "Be less dum."
documentation = "https://flusterapp.com"
edition = "2024"
license = "Unlicense"

[workspace.dependencies]
async-trait = "0.1.81"
thiserror = "2.0.17"
uniffi = { version = "=0.29.5", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
fluster_core_utilities = { path = "packages/rust/fluster_core_utilities" }
fluster_pre_parser = { path = "packages/rust/fluster_pre_parser" }
rayon = "1.11.0"
regex = "1.12.2"
tokio = "1.48.0"
flatbuffers = "25.9.23"
tauri = { version = "2", features = [
    "devtools",
    "specta",
    "tray-icon",
    "test",
    "protocol-asset",
] }
typeshare = "1.0.0"
specta = { version = "=2.0.0-rc.22", features = [
    "chrono",
    "derive",
    "serde",
    "serde_json",
] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
chrono = { version = "0.4", features = ["serde"] }
specta-typescript = "0.0.9"

[workspace.lints.rust]
unused_crate_dependencies = "warn"


[profile.dev.package.lancedb]
opt-level = 1

[profile.release]
lto = true
strip = true
opt-level = 3
# panic = 'abort'
codegen-units = 1
