[workspace]
resolver = "3"
members = [
    "packages/rust/wasm/fluster_wasm",
    "packages/rust/fluster_core_utilities",
    "packages/rust/fluster_database",
    "packages/rust/fluster_internal_cli",
    "packages/rust/conundrum",
    "packages/rust/conundrum_swift/",
    "packages/rust/conundrum_lsp/",
    "packages/rust/fluster_pre_parser",
    "packages/rust/fluster_swift_mdx_parser",
    "packages/rust/uniffi_bindgen",
    "packages/rust/fluster_desktop_fs/",
    "packages/rust/fluster_bibliography", "packages/rust/conundrum_lsp",
]


[workspace.package]
version = "0.0.1"
authors = ["Andrew Iglinski"]
description = "Be less dum."
documentation = "https://flusterapp.com"
edition = "2024"
license = "Unlicense"

[workspace.dependencies]
async-trait = "0.1.81"
thiserror = "2.0.17"
uniffi = { version = "=0.29.5", features = ["tokio", "cli"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
fluster_core_utilities = { path = "packages/rust/fluster_core_utilities" }
rayon = "1.11.0"
regex = "1.12.2"
flatbuffers = "25.9.23"
tauri = { version = "2", features = [
    "devtools",
    "specta",
    "tray-icon",
    "test",
    "protocol-asset",
] }
typeshare = "1.0.0"
specta = { version = "=2.0.0-rc.22", features = [
    "chrono",
    "derive",
    "serde",
    "serde_json",
] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
chrono = { version = "0.4", features = ["serde"] }
strum_macros = "0.27.2"
strum = { version = "0.27.2", features = ["derive"] }


[workspace.lints.rust]
unused_crate_dependencies = "warn"



[profile.dev.package.lancedb]
opt-level = 1

[profile.release]
lto = true
strip = true
opt-level = 3
# panic = 'abort'
codegen-units = 1
