[package]
name = "fluster_desktop"
version = { workspace = true }
description = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fluster_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { workspace = true, features = ["devtools", "specta", "tray-icon", "test", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3.31"
futures = "0.3.31"
glob = "0.3.2"
glob-match = "0.2.1"
notify = { version = "8.2.0", features = ["crossbeam-channel", "serde"] }
uuid = { version = "1.17.0", features = ["v4"] }
strum = "0.27.1"
strum_macros = "0.27.1"
tauri-specta = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }
tauri-plugin-prevent-default = "4"
tauri-plugin-clipboard-manager = "2"
fluster_core_utilities = { path = "../../../packages/rust/fluster_core_utilities" }
fluster_database = { path = "../../../packages/rust/fluster_database/" }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
thiserror = "2.0.12"
ignore = "0.4.25"
tokio = { workspace = true, features = ["full"] }
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
crossbeam-channel = "0.5.15"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
